--- a/MusicApp/app/src/main/res/layout/list_item.xml
+++ b/MusicApp/app/src/main/res/layout/list_item.xml
@@ -12,7 +12,7 @@
     tools:context="com.example.android.musicapp.MainActivity">
 
     <ImageView
-        android:id="@+id/album_photo"
+        android:id="@+id/album_cover_image_view"
         android:layout_width="50dp"
         android:layout_height="50dp"
         tools:src="@drawable/stephen" />
@@ -21,12 +21,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toEndOf="@id/album_photo"
+        android:layout_toEndOf="@id/album_cover_image_view"
         android:orientation="vertical"
         android:paddingStart="10dp">
 
         <TextView
-            android:id="@+id/song_name"
+            android:id="@+id/song_name_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="5dp"
@@ -35,7 +35,7 @@
             tools:text="Song" />
 
         <TextView
-            android:id="@+id/artist_name"
+            android:id="@+id/artist_name_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#000000"
@@ -44,17 +44,8 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="25dp"
-        android:layout_toStartOf="@id/song_length"
-        android:src="@drawable/play" />
-
     <TextView
-        android:id="@+id/song_length"
+        android:id="@+id/song_length_text_view"
         style="@style/AlertDialog.AppCompat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
