--- a/MusicApp/app/src/main/res/layout/songs_list.xml
+++ b/MusicApp/app/src/main/res/layout/songs_list.xml
@@ -2,12 +2,11 @@
 
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
+    android:id="@+id/songs_library_list_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.android.musicapp.MainActivity">
-</ListView>
+    tools:context="com.example.android.musicapp.MainActivity" />
 
 
 
