--- a/MusicApp/app/src/main/res/layout/list_item.xml
+++ b/MusicApp/app/src/main/res/layout/list_item.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toEndOf="@id/album_cover_image_view"
+        android:layout_toRightOf="@id/album_cover_image_view"
         android:orientation="vertical"
         android:paddingStart="10dp">
 
@@ -32,7 +32,7 @@
             android:paddingBottom="5dp"
             android:textColor="#000000"
             android:textSize="15sp"
-            tools:text="Song" />
+            tools:text="@string/song" />
 
         <TextView
             android:id="@+id/artist_name_text_view"
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:textColor="#000000"
             android:textSize="12sp"
-            tools:text="Artist" />
+            tools:text="@string/artist" />
 
     </LinearLayout>
 
@@ -49,9 +49,8 @@
         style="@style/AlertDialog.AppCompat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        tools:text="3:45" />
+        tools:text="@string/length" />
 
 </RelativeLayout>
